// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders darker default icon (three dots) when neither image nor component is supplied and is hovered 1`] = `
<a
  className="reactist_icon reactist_icon--component"
  href="#"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <ThreeDotsIcon
    color="#474747"
  />
</a>
`;

exports[`Icon renders default icon (three dots) when neither image nor component is supplied 1`] = `
<a
  className="reactist_icon reactist_icon--component"
  href="#"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <ThreeDotsIcon />
</a>
`;

exports[`Icon renders icon component when supplied and no image is supplied 1`] = `
<a
  className="reactist_icon reactist_icon--component"
  href="#"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <CloseIcon />
</a>
`;

exports[`Icon wraps icon in a tooltip when tooltip is supplied 1`] = `
<Tooltip
  allowVaguePositioning={false}
  delayHide={0}
  delayShow={500}
  gapSize={5}
  hideOnScroll={true}
  inverted={false}
  position="auto"
  text="Tooltip text"
  withArrow={true}
>
  <a
    className="reactist_icon reactist_icon--component"
    href="#"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <ThreeDotsIcon />
  </a>
</Tooltip>
`;
